<?xml version="1.0"?>
<package format="2">
  <name>pose_estimator</name>
  <version>0.1.0</version>
  <description>The pose_estimator package</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_interfaces</build_depend>
  <build_depend>diagnostic_tools</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>health_monitor</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>thruster_control</build_depend>

  <build_export_depend>auv_interfaces</build_export_depend>
  <build_export_depend>diagnostic_tools</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>thruster_control</build_export_depend>

  <exec_depend>auv_interfaces</exec_depend>
  <exec_depend>diagnostic_tools</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>health_monitor</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>thruster_control</exec_depend>

  <test_depend>roslint</test_depend>
</package>
